<?xml version="1.0"?>
<package format="2">
  <name>gnss_mapping</name>
  <version>0.1.0</version>
  <description>The gnss_mapping package</description>
  <maintainer email="snowbaepbird@gmail.com">Jongwoo Han</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>pcl_ros</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>nmea_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf</depend>

</package>
